versions/v3.7.0/doxygen/html/globals_eval_m.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/doxygen/html/globals_eval_m.html
original_path: doxygen/html/globals_eval_m.html
---

| Logo | Zephyr API Documentation  3.7.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all enum values with links to the files they belong to:

### - m -

- MB\_DISPLAY\_FLAG\_LOOP : [mb\_display.h](group__mb__display.md#gga750a177cffbb90ab38392d9ebad9a8ebac96bf2e5073ffa9ec8521b67c8d581cc)
- MB\_DISPLAY\_MODE\_DEFAULT : [mb\_display.h](group__mb__display.md#gga750a177cffbb90ab38392d9ebad9a8eba804d6d635a1525c85fd4bd349a56fff5)
- MB\_DISPLAY\_MODE\_SCROLL : [mb\_display.h](group__mb__display.md#gga750a177cffbb90ab38392d9ebad9a8ebaa9e5d94518766711673e3c1e7b513e69)
- MB\_DISPLAY\_MODE\_SINGLE : [mb\_display.h](group__mb__display.md#gga750a177cffbb90ab38392d9ebad9a8eba4cc5223f0f4d28c9bb7c8be5ee6a744a)
- MCP7940N\_ALARM\_TRIGGER\_ALL : [mcp7940n.h](mcp7940n_8h.md#ab0abecad5284f476a3cc754f6f460c56ae900f75907656299d7a0db6e294441b8)
- MCP7940N\_ALARM\_TRIGGER\_DATE : [mcp7940n.h](mcp7940n_8h.md#ab0abecad5284f476a3cc754f6f460c56a192356760370bf7649f91efc2bd6eb2d)
- MCP7940N\_ALARM\_TRIGGER\_HOURS : [mcp7940n.h](mcp7940n_8h.md#ab0abecad5284f476a3cc754f6f460c56a29a1714cd8617b1f47e9db6bef69460a)
- MCP7940N\_ALARM\_TRIGGER\_MINUTES : [mcp7940n.h](mcp7940n_8h.md#ab0abecad5284f476a3cc754f6f460c56a0703a8e8c9c7126bae4deac00729b27c)
- MCP7940N\_ALARM\_TRIGGER\_SECONDS : [mcp7940n.h](mcp7940n_8h.md#ab0abecad5284f476a3cc754f6f460c56a432b8881c205779a5d719da529712db8)
- MCP7940N\_ALARM\_TRIGGER\_WDAY : [mcp7940n.h](mcp7940n_8h.md#ab0abecad5284f476a3cc754f6f460c56ac1e977636f2081b261035d1e7c5b04e7)
- MDIO\_OP\_C22\_READ : [mdio.h](group__ethernet__mdio.md#gga304f668820ee91a63512c174e405b492a1990de139b54d7e17f57245ad254db46)
- MDIO\_OP\_C22\_WRITE : [mdio.h](group__ethernet__mdio.md#gga304f668820ee91a63512c174e405b492a1792985f314fb97951befbd6bef29e6d)
- MDIO\_OP\_C45\_ADDRESS : [mdio.h](group__ethernet__mdio.md#gga304f668820ee91a63512c174e405b492ad6ad469f50d382878c1d1b57c2a6a371)
- MDIO\_OP\_C45\_READ : [mdio.h](group__ethernet__mdio.md#gga304f668820ee91a63512c174e405b492a0335bfebfd1557bc33cac6daedbf11b1)
- MDIO\_OP\_C45\_READ\_INC : [mdio.h](group__ethernet__mdio.md#gga304f668820ee91a63512c174e405b492a2b901e2c23d60d424ec9c9d2610483dd)
- MDIO\_OP\_C45\_WRITE : [mdio.h](group__ethernet__mdio.md#gga304f668820ee91a63512c174e405b492af969ce4b1ebc4dd291edc4c14f6c551f)
- MDM\_RAT\_CAT\_M1 : [hl7800.h](hl7800_8h.md#a2d26759e8ea3aca2e8e4a6cccac2361aac95a4a3318b0683972336c1036f0548e)
- MDM\_RAT\_CAT\_NB1 : [hl7800.h](hl7800_8h.md#a2d26759e8ea3aca2e8e4a6cccac2361aa30bba3902918ea11995cd3db20319d61)
- MEMORY\_TO\_HOST : [dma.h](group__dma__interface.md#ggae442d8ba73be7e53b68165647b0ea402a61e65f3065bf7cdb40efc9039debbb60)
- MEMORY\_TO\_MEMORY : [dma.h](group__dma__interface.md#ggae442d8ba73be7e53b68165647b0ea402a52f28a5eff23fcddd2a138092d9f7cd5)
- MEMORY\_TO\_PERIPHERAL : [dma.h](group__dma__interface.md#ggae442d8ba73be7e53b68165647b0ea402a4617446ef0e7c2bced585b309011a25a)
- MGMT\_CB\_ERROR\_ERR : [callbacks.h](group__mcumgr__callback__api.md#gga1ba636c0efb7a91630ed9743e6fd4d6cad88f720a1d62658c346e8bebfb81d66d)
- MGMT\_CB\_ERROR\_RC : [callbacks.h](group__mcumgr__callback__api.md#gga1ba636c0efb7a91630ed9743e6fd4d6ca6ca7c4ba7dc1c300489da4a935b7d990)
- MGMT\_CB\_OK : [callbacks.h](group__mcumgr__callback__api.md#gga1ba636c0efb7a91630ed9743e6fd4d6cac9a6240975af04d413048d762ca1b0da)
- MGMT\_ERR\_EACCESSDENIED : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5aa43ccd2b916bcf346b202a8e0e5e4bde)
- MGMT\_ERR\_EBADSTATE : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5a4385d9d027ea3ddd10ae9467ed8ca787)
- MGMT\_ERR\_EBUSY : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5a7a0a4726f516645ac8b19efb25f79be1)
- MGMT\_ERR\_ECORRUPT : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5aa9e253e66d08f08845b2290cd98f68f5)
- MGMT\_ERR\_EINVAL : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5a267572964d0db5483ca33e29c5f22fa7)
- MGMT\_ERR\_EMSGSIZE : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5a16c3e20b3bb42218548fb15d3db144fd)
- MGMT\_ERR\_ENOENT : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5a54ad7a80506d328de6b6d0a0e37fad9e)
- MGMT\_ERR\_ENOMEM : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5ac614974c6f88a8b23d9597f54d34b4fe)
- MGMT\_ERR\_ENOTSUP : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5a1d37a8c1f0f5618cf192dd8f750ac758)
- MGMT\_ERR\_EOK : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5a4201fc6fbffd1ca9ae99a2e90a40896f)
- MGMT\_ERR\_EPERUSER : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5a1411ec43d223c8a0765ffc9aabe934b8)
- MGMT\_ERR\_ETIMEOUT : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5ab666f089718b37ada6e2578fa620cb55)
- MGMT\_ERR\_EUNKNOWN : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5a68adbc4d77eaae550973b5169d1c14be)
- MGMT\_ERR\_UNSUPPORTED\_TOO\_NEW : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5ae286a84609448fd4465f3ca7cc9bff00)
- MGMT\_ERR\_UNSUPPORTED\_TOO\_OLD : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggac5d8757a7ca945c77f405764b85ad5c5a8145f07e634b5aec368d737dd2a6b054)
- MGMT\_EVT\_GRP\_ALL : [callbacks.h](group__mcumgr__callback__api.md#gga40ecf8933112abe76d7fedb3dcc7cdbea0529ffba74faffdc8f0ad33ab3c4786a)
- MGMT\_EVT\_GRP\_FS : [callbacks.h](group__mcumgr__callback__api.md#gga40ecf8933112abe76d7fedb3dcc7cdbea5504e38868b808ea6e46965bf3e6da48)
- MGMT\_EVT\_GRP\_IMG : [callbacks.h](group__mcumgr__callback__api.md#gga40ecf8933112abe76d7fedb3dcc7cdbeaf55a2f10814a24eb11660ffe4bb930e1)
- MGMT\_EVT\_GRP\_OS : [callbacks.h](group__mcumgr__callback__api.md#gga40ecf8933112abe76d7fedb3dcc7cdbea34df22b866cd61f81bdc7d743edce2ae)
- MGMT\_EVT\_GRP\_SETTINGS : [callbacks.h](group__mcumgr__callback__api.md#gga40ecf8933112abe76d7fedb3dcc7cdbea541b2a1541ad78bdfb3d26dc314ba536)
- MGMT\_EVT\_GRP\_SMP : [callbacks.h](group__mcumgr__callback__api.md#gga40ecf8933112abe76d7fedb3dcc7cdbea18b3bfbd15159108bf60fd8e0569658c)
- MGMT\_EVT\_GRP\_USER\_CUSTOM\_START : [callbacks.h](group__mcumgr__callback__api.md#gga40ecf8933112abe76d7fedb3dcc7cdbea66361c0b52e996d2feb0a7c84532594d)
- MGMT\_EVT\_OP\_ALL : [callbacks.h](group__mcumgr__callback__api.md#ggaab6470007be89e5aab88838456f9561aaf9e289ad5f7e0fd8bec581f67951813a)
- MGMT\_EVT\_OP\_CMD\_ALL : [callbacks.h](group__mcumgr__callback__api.md#gga590788274b4508c6203685d9e9252184aa447c50326ec3f90c66314e744de0e70)
- MGMT\_EVT\_OP\_CMD\_DONE : [callbacks.h](group__mcumgr__callback__api.md#gga590788274b4508c6203685d9e9252184adb820d1a8cdea6c74a5a39f096deab12)
- MGMT\_EVT\_OP\_CMD\_RECV : [callbacks.h](group__mcumgr__callback__api.md#gga590788274b4508c6203685d9e9252184a933f494aa22d52d536bb6c3de0dbeb28)
- MGMT\_EVT\_OP\_CMD\_STATUS : [callbacks.h](group__mcumgr__callback__api.md#gga590788274b4508c6203685d9e9252184afc1cee09954cdc6dfaee196dd7518770)
- MGMT\_EVT\_OP\_FS\_MGMT\_ALL : [callbacks.h](group__mcumgr__callback__api.md#gga324223c20cbefe3400272e2789082c79a9d0806e3d6f0276930af97370ae23b53)
- MGMT\_EVT\_OP\_FS\_MGMT\_FILE\_ACCESS : [callbacks.h](group__mcumgr__callback__api.md#gga324223c20cbefe3400272e2789082c79a0475953c86b97afa8e4ed30da3f736d3)
- MGMT\_EVT\_OP\_IMG\_MGMT\_ALL : [callbacks.h](group__mcumgr__callback__api.md#gga3fa2c42bade08cca1122e32f6315f107a0ba2354ef268ed22c51df7e5708c50bf)
- MGMT\_EVT\_OP\_IMG\_MGMT\_DFU\_CHUNK : [callbacks.h](group__mcumgr__callback__api.md#gga3fa2c42bade08cca1122e32f6315f107a19d53f0c0f6649858e97fbcecfbaf24c)
- MGMT\_EVT\_OP\_IMG\_MGMT\_DFU\_CHUNK\_WRITE\_COMPLETE : [callbacks.h](group__mcumgr__callback__api.md#gga3fa2c42bade08cca1122e32f6315f107a4204cb29c7308f103644162839abcb88)
- MGMT\_EVT\_OP\_IMG\_MGMT\_DFU\_CONFIRMED : [callbacks.h](group__mcumgr__callback__api.md#gga3fa2c42bade08cca1122e32f6315f107a36e486e194d0d6013d188b4ed70a95fb)
- MGMT\_EVT\_OP\_IMG\_MGMT\_DFU\_PENDING : [callbacks.h](group__mcumgr__callback__api.md#gga3fa2c42bade08cca1122e32f6315f107a2ff64450efa47d0d460c866f5634bce4)
- MGMT\_EVT\_OP\_IMG\_MGMT\_DFU\_STARTED : [callbacks.h](group__mcumgr__callback__api.md#gga3fa2c42bade08cca1122e32f6315f107af8836c552e137e15d5e859515f067bbf)
- MGMT\_EVT\_OP\_IMG\_MGMT\_DFU\_STOPPED : [callbacks.h](group__mcumgr__callback__api.md#gga3fa2c42bade08cca1122e32f6315f107af6424b9e8f800bde22a764da459a50a8)
- MGMT\_EVT\_OP\_OS\_MGMT\_ALL : [callbacks.h](group__mcumgr__callback__api.md#gga261346c700a2522542d8282ca76f88a5ae5e0c2779b106a03a675ee2f9b1c389a)
- MGMT\_EVT\_OP\_OS\_MGMT\_DATETIME\_GET : [callbacks.h](group__mcumgr__callback__api.md#gga261346c700a2522542d8282ca76f88a5a06b0f21e6905a28251f04ec544095a2d)
- MGMT\_EVT\_OP\_OS\_MGMT\_DATETIME\_SET : [callbacks.h](group__mcumgr__callback__api.md#gga261346c700a2522542d8282ca76f88a5a3cd3ee81f3c691c81a11de2dc6ccf98b)
- MGMT\_EVT\_OP\_OS\_MGMT\_INFO\_APPEND : [callbacks.h](group__mcumgr__callback__api.md#gga261346c700a2522542d8282ca76f88a5ac931d11c7cc4160a9f93c3f011a26f0f)
- MGMT\_EVT\_OP\_OS\_MGMT\_INFO\_CHECK : [callbacks.h](group__mcumgr__callback__api.md#gga261346c700a2522542d8282ca76f88a5a60756021758616ee8d90b5508cb34ba5)
- MGMT\_EVT\_OP\_OS\_MGMT\_RESET : [callbacks.h](group__mcumgr__callback__api.md#gga261346c700a2522542d8282ca76f88a5a9feea9f8cfcca803a18be03e08583c52)
- MGMT\_EVT\_OP\_SETTINGS\_MGMT\_ACCESS : [callbacks.h](group__mcumgr__callback__api.md#gga1711bc9f45a8114a6b0c89db4a40e3dea65c675aa2e807d9977a5ff13a97c75a0)
- MGMT\_EVT\_OP\_SETTINGS\_MGMT\_ALL : [callbacks.h](group__mcumgr__callback__api.md#gga1711bc9f45a8114a6b0c89db4a40e3deac91ef1ec87aabb0b3f3587a9303bdbf2)
- MGMT\_GROUP\_ID\_CRASH : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#gga81f98b9a0c3810f7d607b783f8e259b5afaee8ebf655c06b2e7b2a1fe6d45f204)
- MGMT\_GROUP\_ID\_FS : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#gga81f98b9a0c3810f7d607b783f8e259b5acf2b9841e28af096820a5dfddc257ca5)
- MGMT\_GROUP\_ID\_IMAGE : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#gga81f98b9a0c3810f7d607b783f8e259b5a60259d94a32589e521718d100fc5cb2c)
- MGMT\_GROUP\_ID\_LOG : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#gga81f98b9a0c3810f7d607b783f8e259b5af0cff7aeb29cea798688aa3dbf809309)
- MGMT\_GROUP\_ID\_OS : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#gga81f98b9a0c3810f7d607b783f8e259b5a7cbf80fc5ccf1e5330e4db7e8edaa120)
- MGMT\_GROUP\_ID\_PERUSER : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#gga81f98b9a0c3810f7d607b783f8e259b5af2504389290c7b2a3537f4ebfb730726)
- MGMT\_GROUP\_ID\_RUN : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#gga81f98b9a0c3810f7d607b783f8e259b5a6907de35346ca3af726f6dedaa19b01a)
- MGMT\_GROUP\_ID\_SETTINGS : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#gga81f98b9a0c3810f7d607b783f8e259b5a0fb725ded4c1e06219549a8bd67b41cb)
- MGMT\_GROUP\_ID\_SHELL : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#gga81f98b9a0c3810f7d607b783f8e259b5ab8947457860f8a54b4795796b175cd85)
- MGMT\_GROUP\_ID\_SPLIT : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#gga81f98b9a0c3810f7d607b783f8e259b5a5f7f219d358b67bd30663e176d6be527)
- MGMT\_GROUP\_ID\_STAT : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#gga81f98b9a0c3810f7d607b783f8e259b5abcf72c3092f7aaf88aa11dd5b291a3fc)
- MGMT\_OP\_READ : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggae06a618f492f18e856742b4affab80ddac8450257b20fecdaaeab9019434a3fd4)
- MGMT\_OP\_READ\_RSP : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggae06a618f492f18e856742b4affab80ddad743c94ad3055eb7cf519d88c1d079a7)
- MGMT\_OP\_WRITE : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggae06a618f492f18e856742b4affab80dda8dee5baf1e73f1eabccbe8300323e5f9)
- MGMT\_OP\_WRITE\_RSP : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#ggae06a618f492f18e856742b4affab80dda98e8061c8b66effbfee42d79b6e38543)
- MMC\_4\_0 : [sd\_spec.h](sd__spec_8h.md#ac86d8a44f37c771cb666f69a516dff81aba4f3f30eaa7d3368743f78f3c355269)
- MMC\_4\_1 : [sd\_spec.h](sd__spec_8h.md#ac86d8a44f37c771cb666f69a516dff81ab84ae4edfcca8ccae2a0df0643d04ca2)
- MMC\_4\_2 : [sd\_spec.h](sd__spec_8h.md#ac86d8a44f37c771cb666f69a516dff81a9a960567b8ecbd6feff7e6337fc98567)
- MMC\_4\_3 : [sd\_spec.h](sd__spec_8h.md#ac86d8a44f37c771cb666f69a516dff81a0f4fc7047a7c813b9ada618ed05e09a4)
- MMC\_4\_4 : [sd\_spec.h](sd__spec_8h.md#ac86d8a44f37c771cb666f69a516dff81a43b7acda3747eb2233c2f2a433ff71c7)
- MMC\_4\_5 : [sd\_spec.h](sd__spec_8h.md#ac86d8a44f37c771cb666f69a516dff81aa0d4721b24d0cd71d6a8fbfc666a6e7c)
- MMC\_5\_0 : [sd\_spec.h](sd__spec_8h.md#ac86d8a44f37c771cb666f69a516dff81a87a4c0efb7e10cccce939af5f60343ad)
- MMC\_5\_1 : [sd\_spec.h](sd__spec_8h.md#ac86d8a44f37c771cb666f69a516dff81ad49da8223b68d35a4d95d6b48bb8a3f7)
- MMC\_CHECK\_BUS\_TEST : [sd\_spec.h](sd__spec_8h.md#a072705601a34c697515f74acb0474c99a45bc2d4b117d144ef5191719f9b6c297)
- MMC\_CLOCK\_26MHZ : [sd\_spec.h](sd__spec_8h.md#a9660a61775e481ae4093e11ce9336539ae9369c1cd7595ab83289fc356e9cc1b6)
- MMC\_CLOCK\_52MHZ : [sd\_spec.h](sd__spec_8h.md#a9660a61775e481ae4093e11ce9336539a5c37aeeb3c68d7b3dbe8b9001a00507c)
- MMC\_CLOCK\_DDR52 : [sd\_spec.h](sd__spec_8h.md#a9660a61775e481ae4093e11ce9336539a66ecc8c1a73181d70e23424cf718728d)
- MMC\_CLOCK\_HS200 : [sd\_spec.h](sd__spec_8h.md#a9660a61775e481ae4093e11ce9336539a14dec2b314ed13974dbba31f33a5eab9)
- MMC\_CLOCK\_HS400 : [sd\_spec.h](sd__spec_8h.md#a9660a61775e481ae4093e11ce9336539a788a77f1e7a468c14ef57319ef8938f3)
- mmc\_driv\_type0 : [sd\_spec.h](sd__spec_8h.md#af9783799f316cbaed12e18ce9944b09dabd4f3ffac3f52efe797ce3ee3c31a03f)
- mmc\_driv\_type1 : [sd\_spec.h](sd__spec_8h.md#af9783799f316cbaed12e18ce9944b09da2cedd0b40bf81afb35792150b2d4964a)
- mmc\_driv\_type2 : [sd\_spec.h](sd__spec_8h.md#af9783799f316cbaed12e18ce9944b09dafed77d2aed13d59fa6645cb06fc21c43)
- mmc\_driv\_type3 : [sd\_spec.h](sd__spec_8h.md#af9783799f316cbaed12e18ce9944b09dacf4d28d56a6c4925944ffc99072d46e9)
- mmc\_driv\_type4 : [sd\_spec.h](sd__spec_8h.md#af9783799f316cbaed12e18ce9944b09daf5448a25c8b5a8411f059469112ef2be)
- MMC\_HS200\_TIMING : [sd\_spec.h](sd__spec_8h.md#ae1956c4b374e2c8b6a585596e93ac345a39200c50c7e22c096db3ce1dd3fe78d5)
- MMC\_HS400\_TIMING : [sd\_spec.h](sd__spec_8h.md#ae1956c4b374e2c8b6a585596e93ac345a4ea17060afbcd026387172c1af57bb43)
- MMC\_HS\_TIMING : [sd\_spec.h](sd__spec_8h.md#ae1956c4b374e2c8b6a585596e93ac345a17160707005c580fbd52dbd6b99699dd)
- MMC\_LEGACY\_TIMING : [sd\_spec.h](sd__spec_8h.md#ae1956c4b374e2c8b6a585596e93ac345ae51a5474387816c03970aa0f8058b002)
- MMC\_MAXFREQ\_100KHZ : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8a221dc45c7b73f6f96a63acbeb3e5e121)
- MMC\_MAXFREQ\_100MHZ : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8a13c703d344a1e03c1aa5881a77980085)
- MMC\_MAXFREQ\_10MHZ : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8af63af4938d5aad64bac19fac42aedd10)
- MMC\_MAXFREQ\_1MHZ : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8a32c9f5017cd49c9ca4b352269de6eeff)
- MMC\_MAXFREQ\_MULT\_10 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8a74d01430b854f42ea84dba9d3ce45b16)
- MMC\_MAXFREQ\_MULT\_12 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8a4a3b8dc88c6349fb5f49ed3062a39a17)
- MMC\_MAXFREQ\_MULT\_13 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8a2c639715b63769e9a431a93e636f007e)
- MMC\_MAXFREQ\_MULT\_15 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8ac988a54239b7d9e182f1b2f480567e66)
- MMC\_MAXFREQ\_MULT\_20 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8ac8848c5cdf177737744da3283f7140d5)
- MMC\_MAXFREQ\_MULT\_26 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8ab1ff3da74a0dea49ffe7ac1d945ec4e6)
- MMC\_MAXFREQ\_MULT\_30 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8a69e1d369d668d63071410078a31099a0)
- MMC\_MAXFREQ\_MULT\_35 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8a63c0eee223946b1ae2b187bb585dfde4)
- MMC\_MAXFREQ\_MULT\_40 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8a572d53afafb39341e0cdb80d2d041d2c)
- MMC\_MAXFREQ\_MULT\_45 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8a5bd0506d7efbecdc42eb8fae1427dc37)
- MMC\_MAXFREQ\_MULT\_52 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8a988f18b9f418744721b0fc91f2432449)
- MMC\_MAXFREQ\_MULT\_55 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8abecfcd6d212185c74b57941c3fa58233)
- MMC\_MAXFREQ\_MULT\_60 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8adf578325509923b46e3ff4fbd74889ad)
- MMC\_MAXFREQ\_MULT\_70 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8aee24df1d628479fe2d920839a0bf5012)
- MMC\_MAXFREQ\_MULT\_80 : [sd\_spec.h](sd__spec_8h.md#a313c45576db4ae219288fb4fbaad4bd8a24ea8c9db5531b5404bb667da26ac5d0)
- MMC\_OCR\_PWR\_BUSY\_FLAG : [sd\_spec.h](sd__spec_8h.md#a0769bcc2f15d43383f4e5a6c845c51aaa7127f5d946ea6bb4ec19b96033aafc4b)
- MMC\_OCR\_SECTOR\_MODE : [sd\_spec.h](sd__spec_8h.md#a0769bcc2f15d43383f4e5a6c845c51aaa669934175190e5416a0d04c3c94acb4b)
- MMC\_OCR\_VDD170\_195FLAG : [sd\_spec.h](sd__spec_8h.md#a0769bcc2f15d43383f4e5a6c845c51aaa01aef2529fc39dc455c0fb8f2e9cc434)
- MMC\_OCR\_VDD20\_26FLAG : [sd\_spec.h](sd__spec_8h.md#a0769bcc2f15d43383f4e5a6c845c51aaa984a5e7f75a4418ca29141f5c6031d1e)
- MMC\_OCR\_VDD27\_36FLAG : [sd\_spec.h](sd__spec_8h.md#a0769bcc2f15d43383f4e5a6c845c51aaa239f02ae958dc3e25032825bb4c067e7)
- MMC\_SEND\_BUS\_TEST : [sd\_spec.h](sd__spec_8h.md#a072705601a34c697515f74acb0474c99a35b942802a4238882440f2e470f2555f)
- MMC\_SEND\_EXT\_CSD : [sd\_spec.h](sd__spec_8h.md#a072705601a34c697515f74acb0474c99a7c9bfc788861214fae86e22443e9484a)
- MMC\_SEND\_OP\_COND : [sd\_spec.h](sd__spec_8h.md#a072705601a34c697515f74acb0474c99a54546b311e446754738a9b6f1e3eaea4)
- MMC\_SEND\_RELATIVE\_ADDR : [sd\_spec.h](sd__spec_8h.md#a072705601a34c697515f74acb0474c99a56c94068ecb32eb9ced47d4a3bf95481)
- MMC\_SEND\_TUNING\_BLOCK : [sd\_spec.h](sd__spec_8h.md#a072705601a34c697515f74acb0474c99a0378338c2747ba8947d8ffcb18f77d51)
- MODBUS\_MODE\_ASCII : [modbus.h](group__modbus.md#gga4bd8913e1c77a1e4b19585caa9f77c2eafdf029741cc1bdecb2cb9baf4f06732a)
- MODBUS\_MODE\_RAW : [modbus.h](group__modbus.md#gga4bd8913e1c77a1e4b19585caa9f77c2ea4d05b2cfd56ccf15eb1d8c7bb71071ec)
- MODBUS\_MODE\_RTU : [modbus.h](group__modbus.md#gga4bd8913e1c77a1e4b19585caa9f77c2ea52033dc2ef37fc286a590b1f97d946ef)
- MODEM\_CHAT\_SCRIPT\_RESULT\_ABORT : [chat.h](chat_8h.md#a4035be227ddec8424311575305647d3eacddc6a743055b7c49fac484442dda31b)
- MODEM\_CHAT\_SCRIPT\_RESULT\_SUCCESS : [chat.h](chat_8h.md#a4035be227ddec8424311575305647d3ea977c97fa42b7fb38d337062984b0deee)
- MODEM\_CHAT\_SCRIPT\_RESULT\_TIMEOUT : [chat.h](chat_8h.md#a4035be227ddec8424311575305647d3ea4991b2748978d1219923d275a42c575e)
- MODEM\_CHAT\_SCRIPT\_SEND\_STATE\_DELIMITER : [chat.h](chat_8h.md#a734cb1bcbbbf5c87551b20038e0608aeaaf1d0f61d85bc5fbb77a979efe9b1aaf)
- MODEM\_CHAT\_SCRIPT\_SEND\_STATE\_IDLE : [chat.h](chat_8h.md#a734cb1bcbbbf5c87551b20038e0608aea8971f4f05275f31d255f4a5c7dd47974)
- MODEM\_CHAT\_SCRIPT\_SEND\_STATE\_REQUEST : [chat.h](chat_8h.md#a734cb1bcbbbf5c87551b20038e0608aea14824a0ffb464bf00a8aadcf4c8bdbbd)
- MODEM\_CMUX\_EVENT\_CONNECTED : [cmux.h](group__modem__cmux.md#ggab60ea756d37bd9ed59f07c6380952d36a8d37518bf5ba31237e59a413f36be4b2)
- MODEM\_CMUX\_EVENT\_DISCONNECTED : [cmux.h](group__modem__cmux.md#ggab60ea756d37bd9ed59f07c6380952d36a095af6ed667b014e4beb4c13c34c8a21)
- MODEM\_PIPE\_EVENT\_CLOSED : [pipe.h](group__modem__pipe.md#ggab9dd98d92d6446dd43852d280574f67aae3ed9618f4986a7c3bef59e16a61316f)
- MODEM\_PIPE\_EVENT\_OPENED : [pipe.h](group__modem__pipe.md#ggab9dd98d92d6446dd43852d280574f67aa68d9924c9fc58cf9ca8760573d32f891)
- MODEM\_PIPE\_EVENT\_RECEIVE\_READY : [pipe.h](group__modem__pipe.md#ggab9dd98d92d6446dd43852d280574f67aa6687ded90e569690afc72020e78624c4)
- MODEM\_PIPE\_EVENT\_TRANSMIT\_IDLE : [pipe.h](group__modem__pipe.md#ggab9dd98d92d6446dd43852d280574f67aaa6e11b11afb91ec50c4d0dfb363e7ad4)
- MODEM\_PIPELINK\_EVENT\_CONNECTED : [pipelink.h](group__modem__pipelink.md#gga399168cacd287e376df68c4cf221ba00ab1a51a16b5dbe02ebca8fb0efe4be81f)
- MODEM\_PIPELINK\_EVENT\_DISCONNECTED : [pipelink.h](group__modem__pipelink.md#gga399168cacd287e376df68c4cf221ba00ae118b022efcba2033701dfb8f2e7d38d)
- MQTT\_BAD\_USER\_NAME\_OR\_PASSWORD : [mqtt.h](group__mqtt__socket.md#ggaa17b38ed9c7e65f3e01ad906b24bb618aa12d243cef12e3e7b1f4e245f64a1134)
- MQTT\_CONNECTION\_ACCEPTED : [mqtt.h](group__mqtt__socket.md#ggaa17b38ed9c7e65f3e01ad906b24bb618a2fdd911a8978b8df2254766c1e3fd050)
- MQTT\_EVT\_CONNACK : [mqtt.h](group__mqtt__socket.md#gga0071fe013b9920711456ef51cc3e6d91ab6e626b5a1eda76b32053ccbb4b7b5f3)
- MQTT\_EVT\_DISCONNECT : [mqtt.h](group__mqtt__socket.md#gga0071fe013b9920711456ef51cc3e6d91a8de64478f7ae463d7844fc2e786ce032)
- MQTT\_EVT\_PINGRESP : [mqtt.h](group__mqtt__socket.md#gga0071fe013b9920711456ef51cc3e6d91a52842872177b26e5e0e45a3c66fdb0b5)
- MQTT\_EVT\_PUBACK : [mqtt.h](group__mqtt__socket.md#gga0071fe013b9920711456ef51cc3e6d91a2f25d5d4ca704ab63439d4706d3587de)
- MQTT\_EVT\_PUBCOMP : [mqtt.h](group__mqtt__socket.md#gga0071fe013b9920711456ef51cc3e6d91afdba5e48987b4355f445d35b4dc056e8)
- MQTT\_EVT\_PUBLISH : [mqtt.h](group__mqtt__socket.md#gga0071fe013b9920711456ef51cc3e6d91aa893a345e05e796cfd28392c1c4d8cf9)
- MQTT\_EVT\_PUBREC : [mqtt.h](group__mqtt__socket.md#gga0071fe013b9920711456ef51cc3e6d91a1d5f6ba2524f935dd9625d85638eda87)
- MQTT\_EVT\_PUBREL : [mqtt.h](group__mqtt__socket.md#gga0071fe013b9920711456ef51cc3e6d91ab35ebaf4dcc6698471eb16a41c8252a2)
- MQTT\_EVT\_SUBACK : [mqtt.h](group__mqtt__socket.md#gga0071fe013b9920711456ef51cc3e6d91a67caa558ae7975548b3c4e1c1de5f8fb)
- MQTT\_EVT\_UNSUBACK : [mqtt.h](group__mqtt__socket.md#gga0071fe013b9920711456ef51cc3e6d91aa5c333ddf366e44f932ec5545ed75bb2)
- MQTT\_IDENTIFIER\_REJECTED : [mqtt.h](group__mqtt__socket.md#ggaa17b38ed9c7e65f3e01ad906b24bb618aa662f46a044e31ae26397adffee82141)
- MQTT\_NOT\_AUTHORIZED : [mqtt.h](group__mqtt__socket.md#ggaa17b38ed9c7e65f3e01ad906b24bb618a4d101dcf5a101d90ae26ba8fe54a27eb)
- MQTT\_QOS\_0\_AT\_MOST\_ONCE : [mqtt.h](group__mqtt__socket.md#gga396015e492b0fee8da37c7168d9cdb33a2ea1051887beb30d7c1fd61b5e153f6e)
- MQTT\_QOS\_1\_AT\_LEAST\_ONCE : [mqtt.h](group__mqtt__socket.md#gga396015e492b0fee8da37c7168d9cdb33a732d9d294b41bd472ef221c8dff0731d)
- MQTT\_QOS\_2\_EXACTLY\_ONCE : [mqtt.h](group__mqtt__socket.md#gga396015e492b0fee8da37c7168d9cdb33a9012ddca1943a824454ac14a85bcf117)
- MQTT\_SERVER\_UNAVAILABLE : [mqtt.h](group__mqtt__socket.md#ggaa17b38ed9c7e65f3e01ad906b24bb618afe234e7084078871a567359819458df3)
- MQTT\_SN\_CODE\_ACCEPTED : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggaab8c9d8ddbaa2af542fdcd3e4178ea9ea9075123172fff71a180c280b5ca99f1c)
- MQTT\_SN\_CODE\_REJECTED\_CONGESTION : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggaab8c9d8ddbaa2af542fdcd3e4178ea9ea94471cce989efc2514bf37b54848cee7)
- MQTT\_SN\_CODE\_REJECTED\_NOTSUP : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggaab8c9d8ddbaa2af542fdcd3e4178ea9eaa612db276815fadc5b379f13e7eb78f5)
- MQTT\_SN\_CODE\_REJECTED\_TOPIC\_ID : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggaab8c9d8ddbaa2af542fdcd3e4178ea9eac6de6a7f4b8becc11e83fb60e30e2ef3)
- MQTT\_SN\_EVT\_ASLEEP : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggaa52518be4aa308dda9552e14d0045c42a65d0caaadc8ad95dffd8beb5c77ceb3f)
- MQTT\_SN\_EVT\_AWAKE : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggaa52518be4aa308dda9552e14d0045c42ae0a691ff1d222e12aada6de2706090bd)
- MQTT\_SN\_EVT\_CONNECTED : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggaa52518be4aa308dda9552e14d0045c42a4c6c473a7ef6e0fd362b1b865fe3d6a6)
- MQTT\_SN\_EVT\_DISCONNECTED : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggaa52518be4aa308dda9552e14d0045c42a9a155ce397e5eb73496bd85ef7cc44bf)
- MQTT\_SN\_EVT\_PINGRESP : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggaa52518be4aa308dda9552e14d0045c42a06e53118fc5799c924de346ac7ee1135)
- MQTT\_SN\_EVT\_PUBLISH : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggaa52518be4aa308dda9552e14d0045c42a5923dab1ac92c6d186920368440b53bf)
- MQTT\_SN\_QOS\_0 : [mqtt\_sn.h](group__mqtt__sn__socket.md#gga8072226d2d96e184137ef40775389786acb18ea4162f8ccac24e733da5511b389)
- MQTT\_SN\_QOS\_1 : [mqtt\_sn.h](group__mqtt__sn__socket.md#gga8072226d2d96e184137ef40775389786a785b3ab4cde3c861f861009b00e584da)
- MQTT\_SN\_QOS\_2 : [mqtt\_sn.h](group__mqtt__sn__socket.md#gga8072226d2d96e184137ef40775389786a4b01cb386e18de88b8f26973a65771f4)
- MQTT\_SN\_QOS\_M1 : [mqtt\_sn.h](group__mqtt__sn__socket.md#gga8072226d2d96e184137ef40775389786a2f0dce2f9249cea36d77ea16d21f61b9)
- MQTT\_SN\_TOPIC\_TYPE\_NORMAL : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggabca9262da31b09086b0f802d15eea3fda18ad286ee41092116dd734faba7f3e9b)
- MQTT\_SN\_TOPIC\_TYPE\_PREDEF : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggabca9262da31b09086b0f802d15eea3fda48301bc2ca23f5f53c2e320b309f923b)
- MQTT\_SN\_TOPIC\_TYPE\_SHORT : [mqtt\_sn.h](group__mqtt__sn__socket.md#ggabca9262da31b09086b0f802d15eea3fdad142dda8e35f4cbe428dc572fc005730)
- MQTT\_SUBACK\_FAILURE : [mqtt.h](group__mqtt__socket.md#ggaca1e61c8b14b75544e253cea355274a8a08b9651ef43ea219f29125fcb43952f7)
- MQTT\_SUBACK\_SUCCESS\_QoS\_0 : [mqtt.h](group__mqtt__socket.md#ggaca1e61c8b14b75544e253cea355274a8a835fdffd58e7ad800d549c9dfce1ce01)
- MQTT\_SUBACK\_SUCCESS\_QoS\_1 : [mqtt.h](group__mqtt__socket.md#ggaca1e61c8b14b75544e253cea355274a8afd0c8b7b9c39b3e242f33f7603b3ca9c)
- MQTT\_SUBACK\_SUCCESS\_QoS\_2 : [mqtt.h](group__mqtt__socket.md#ggaca1e61c8b14b75544e253cea355274a8ae8702eb6a2944444abd9b2f6c1fb2e1b)
- MQTT\_TRANSPORT\_NON\_SECURE : [mqtt.h](group__mqtt__socket.md#ggaffc2c3078004cf8d24935be086ad63b4a981f7e2ca25c5e478bf658750e26972a)
- MQTT\_TRANSPORT\_NUM : [mqtt.h](group__mqtt__socket.md#ggaffc2c3078004cf8d24935be086ad63b4a61056a250c98f3d29ccf5cdbdda3d3df)
- MQTT\_UNACCEPTABLE\_PROTOCOL\_VERSION : [mqtt.h](group__mqtt__socket.md#ggaa17b38ed9c7e65f3e01ad906b24bb618a9195e642b0b9e594d96aff84f0696744)
- MQTT\_VERSION\_3\_1\_0 : [mqtt.h](group__mqtt__socket.md#gga90d152a4b0986e9a07a12c7c56f5e2a0ac93057183f274a064e118af6b4d681e7)
- MQTT\_VERSION\_3\_1\_1 : [mqtt.h](group__mqtt__socket.md#gga90d152a4b0986e9a07a12c7c56f5e2a0ad2926cb14db1fcfb95a47f45d2f5b08e)
- MS\_OS\_20\_DESCRIPTOR\_INDEX : [msos\_desc.h](msos__desc_8h.md#ab443ad91634b7a8fb19fc2aa7108e631abe0e6e00164db250e4ad900f418a57d5)
- MS\_OS\_20\_FEATURE\_CCGP\_DEVICE : [msos\_desc.h](msos__desc_8h.md#ae46389cacf4c5cca962702fcf0f6feb5ab457a91ffd658376d87d7d32ad770004)
- MS\_OS\_20\_FEATURE\_COMPATIBLE\_ID : [msos\_desc.h](msos__desc_8h.md#ae46389cacf4c5cca962702fcf0f6feb5adf3b0e226fd373b882e27ed494fba265)
- MS\_OS\_20\_FEATURE\_MIN\_RESUME\_TIME : [msos\_desc.h](msos__desc_8h.md#ae46389cacf4c5cca962702fcf0f6feb5a7061acf1dbbeb7e2fbb88d149d295009)
- MS\_OS\_20\_FEATURE\_MODEL\_ID : [msos\_desc.h](msos__desc_8h.md#ae46389cacf4c5cca962702fcf0f6feb5ac7fc46a0124656e986871ae3b085536c)
- MS\_OS\_20\_FEATURE\_REG\_PROPERTY : [msos\_desc.h](msos__desc_8h.md#ae46389cacf4c5cca962702fcf0f6feb5ad49ae449e2e2ff519a69018612ab5e62)
- MS\_OS\_20\_FEATURE\_VENDOR\_REVISION : [msos\_desc.h](msos__desc_8h.md#ae46389cacf4c5cca962702fcf0f6feb5a2f7940f495e1a996692f474a456d63d6)
- MS\_OS\_20\_PROPERTY\_DATA\_REG\_BINARY : [msos\_desc.h](msos__desc_8h.md#a1afad4029116a837d4430a0ea976254fae8bd325ca3f9cc1d33d229d0de14aba1)
- MS\_OS\_20\_PROPERTY\_DATA\_REG\_DWORD\_BIG\_ENDIAN : [msos\_desc.h](msos__desc_8h.md#a1afad4029116a837d4430a0ea976254fa969e1f96f1582db317bbf96d183ae670)
- MS\_OS\_20\_PROPERTY\_DATA\_REG\_DWORD\_LITTLE\_ENDIAN : [msos\_desc.h](msos__desc_8h.md#a1afad4029116a837d4430a0ea976254faa831bf4ba88de3eb768745c41a8dee10)
- MS\_OS\_20\_PROPERTY\_DATA\_REG\_EXPAND\_SZ : [msos\_desc.h](msos__desc_8h.md#a1afad4029116a837d4430a0ea976254fa9245e361cbe8425c1b54958ba0c0902c)
- MS\_OS\_20\_PROPERTY\_DATA\_REG\_LINK : [msos\_desc.h](msos__desc_8h.md#a1afad4029116a837d4430a0ea976254fa4050949a26b3a61f1aeecc996eb02d81)
- MS\_OS\_20\_PROPERTY\_DATA\_REG\_MULTI\_SZ : [msos\_desc.h](msos__desc_8h.md#a1afad4029116a837d4430a0ea976254fa89b2d8dfbddc343879edc14a5c9f93f5)
- MS\_OS\_20\_PROPERTY\_DATA\_REG\_SZ : [msos\_desc.h](msos__desc_8h.md#a1afad4029116a837d4430a0ea976254fa404430118680c625a399662e981c4489)
- MS\_OS\_20\_PROPERTY\_DATA\_RESERVED : [msos\_desc.h](msos__desc_8h.md#a1afad4029116a837d4430a0ea976254fac1e0035b4badb15f714bff249514ef17)
- MS\_OS\_20\_SET\_ALT\_ENUMERATION : [msos\_desc.h](msos__desc_8h.md#ab443ad91634b7a8fb19fc2aa7108e631a2ae9d4948f03b7d9623c547daa0a9116)
- MS\_OS\_20\_SET\_HEADER\_DESCRIPTOR : [msos\_desc.h](msos__desc_8h.md#ae46389cacf4c5cca962702fcf0f6feb5ac74a28d4e873b255d5b027af5ffffb5d)
- MS\_OS\_20\_SUBSET\_HEADER\_CONFIGURATION : [msos\_desc.h](msos__desc_8h.md#ae46389cacf4c5cca962702fcf0f6feb5afe117782c0101a880e152a8a1110ecbc)
- MS\_OS\_20\_SUBSET\_HEADER\_FUNCTION : [msos\_desc.h](msos__desc_8h.md#ae46389cacf4c5cca962702fcf0f6feb5a1200730075635cba8dea3420be41d1a7)
- MSG\_ACCEPT\_RECEIVED : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23a43bc56906b5dc4767d3297400053d286)
- MSG\_DISCARDED : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23aa316636e8353dad1a9d5dec8b85a67e4)
- MSG\_DROPPED\_MSG : [log\_output\_dict.h](log__output__dict_8h.md#a754616ab4233be81726614f64d5d4031ab620d227e5d1704bf479bee5e650e1cd)
- MSG\_NORMAL : [log\_output\_dict.h](log__output__dict_8h.md#a754616ab4233be81726614f64d5d4031a812d08168eae9c7ebbe7dfda459b1304)
- MSG\_NOT\_SUPPORTED\_RECEIVED : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23ab2f97ffaa13c84e656f7ac0004ec86ae)
- MSG\_REJECTED\_RECEIVED : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23a4ad0620e76c694004d3a1b43458a14b2)
- MSPI\_BUS\_ERROR : [mspi.h](group__mspi__interface.md#gga4cd05950729893e08ef0d4a12e2242d5aeeaf87802ecc90ada4c39f65fc0e8af0)
- MSPI\_BUS\_ERROR\_CB : [mspi.h](group__mspi__interface.md#ggab33e9840b0937c944f4e1a2525534cb1a5cff8419a9236cc835a62b124debe498)
- MSPI\_BUS\_EVENT\_MAX : [mspi.h](group__mspi__interface.md#gga4cd05950729893e08ef0d4a12e2242d5a325aa40170de5621e89aa2def557f85a)
- MSPI\_BUS\_NO\_CB : [mspi.h](group__mspi__interface.md#ggab33e9840b0937c944f4e1a2525534cb1aac3e8481082214c0d995ce3c3b452277)
- MSPI\_BUS\_RESET : [mspi.h](group__mspi__interface.md#gga4cd05950729893e08ef0d4a12e2242d5afb1c2030d871cbbaa4341df7989a5a64)
- MSPI\_BUS\_RESET\_CB : [mspi.h](group__mspi__interface.md#ggab33e9840b0937c944f4e1a2525534cb1a63fb981aab764d752c1166fc112094a1)
- MSPI\_BUS\_XFER\_COMPLETE : [mspi.h](group__mspi__interface.md#gga4cd05950729893e08ef0d4a12e2242d5ad47099019f15f97d83bc6435e5e76a61)
- MSPI\_BUS\_XFER\_COMPLETE\_CB : [mspi.h](group__mspi__interface.md#ggab33e9840b0937c944f4e1a2525534cb1aa315ad9c5ba56979914b21208920aad7)
- MSPI\_CE\_ACTIVE\_HIGH : [mspi.h](group__mspi__interface.md#gga283275f86fe186f4b5e30110ae0d506ba375e0b870800e0982b3715417e109a22)
- MSPI\_CE\_ACTIVE\_LOW : [mspi.h](group__mspi__interface.md#gga283275f86fe186f4b5e30110ae0d506bab36e66d82b05449ed6ce5b6ebc8e2bae)
- MSPI\_CPP\_MODE\_0 : [mspi.h](group__mspi__interface.md#gga704e4d3759d3261b4468e9d9900e578cac1c3516819a027f50941e435f54fba90)
- MSPI\_CPP\_MODE\_1 : [mspi.h](group__mspi__interface.md#gga704e4d3759d3261b4468e9d9900e578ca8c93d56778ea1cbf901db1a4b9fee870)
- MSPI\_CPP\_MODE\_2 : [mspi.h](group__mspi__interface.md#gga704e4d3759d3261b4468e9d9900e578cabbde8c1ad9a5a8a9a3ca4ce33e2c0705)
- MSPI\_CPP\_MODE\_3 : [mspi.h](group__mspi__interface.md#gga704e4d3759d3261b4468e9d9900e578ca415e431b25ac4a12f35b139ccb77ba48)
- MSPI\_DATA\_RATE\_DUAL : [mspi.h](group__mspi__interface.md#ggaa2131d9846bbfd74488a6ae1c2003e68a96f82a24b684a7debe0ac32070fa53bc)
- MSPI\_DATA\_RATE\_MAX : [mspi.h](group__mspi__interface.md#ggaa2131d9846bbfd74488a6ae1c2003e68a51f3574f42456a11cc3fcd17c1195dd9)
- MSPI\_DATA\_RATE\_S\_D\_D : [mspi.h](group__mspi__interface.md#ggaa2131d9846bbfd74488a6ae1c2003e68a8cea9da4829a0769e3be8b8a32b79984)
- MSPI\_DATA\_RATE\_S\_S\_D : [mspi.h](group__mspi__interface.md#ggaa2131d9846bbfd74488a6ae1c2003e68a388bbd530a438507dbfa9208ec1ebf39)
- MSPI\_DATA\_RATE\_SINGLE : [mspi.h](group__mspi__interface.md#ggaa2131d9846bbfd74488a6ae1c2003e68a0e0a4b9bfda5f88df8a2fae13281e5e0)
- MSPI\_DEVICE\_CONFIG\_ADDR\_LEN : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647aa2ba135123fe9c89ce50fd86dfea759b)
- MSPI\_DEVICE\_CONFIG\_ALL : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647a67ae821a16a6280aca165ebf67bd2489)
- MSPI\_DEVICE\_CONFIG\_BREAK\_TIME : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647acdea4576df8e6d7d48cc289305237120)
- MSPI\_DEVICE\_CONFIG\_CE\_NUM : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647a4a476e51f0d3613aab1bc9c1b335bab2)
- MSPI\_DEVICE\_CONFIG\_CE\_POL : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647a51f46405fe8923a8b0c39bc2aad1ba0b)
- MSPI\_DEVICE\_CONFIG\_CMD\_LEN : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647a1a2e21a3cbf0ee42977cc8a43efd3fac)
- MSPI\_DEVICE\_CONFIG\_CPP : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647a0d7032e045c80ca266e98f8c6684af65)
- MSPI\_DEVICE\_CONFIG\_DATA\_RATE : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647a0e954604ea419f6a4fdea59e620bdcd9)
- MSPI\_DEVICE\_CONFIG\_DQS : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647a56ceb1ba2a93a626623a13f148282537)
- MSPI\_DEVICE\_CONFIG\_ENDIAN : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647aba8ef6308b3e06a2ace1cc0f225d66ca)
- MSPI\_DEVICE\_CONFIG\_FREQUENCY : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647a135b081210bd5aabf5b610fe90212809)
- MSPI\_DEVICE\_CONFIG\_IO\_MODE : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647a4aba5c75b43e1a87c66e940069b5b27f)
- MSPI\_DEVICE\_CONFIG\_MEM\_BOUND : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647ad07911eacaa2bde26a497c391e5c9946)
- MSPI\_DEVICE\_CONFIG\_NONE : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647acc1d59bd6682933d364f060f31f26878)
- MSPI\_DEVICE\_CONFIG\_READ\_CMD : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647ae7c13ba10174e6f3f90161af69890872)
- MSPI\_DEVICE\_CONFIG\_RX\_DUMMY : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647a13385127a309507ff01559122e03623a)
- MSPI\_DEVICE\_CONFIG\_TX\_DUMMY : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647a60b857bd38b0cced89462771edccd9f5)
- MSPI\_DEVICE\_CONFIG\_WRITE\_CMD : [mspi.h](group__mspi__interface.md#gga71c447d059acf7a8055c380243f3a647a99f486fd1f01684ac232d503af1abf2b)
- MSPI\_DMA : [mspi.h](group__mspi__interface.md#gga116259bbb1d12a10c2ba9e6051f2f000a5a7235fe9c633206906d76d329f623a8)
- MSPI\_FULL\_DUPLEX : [mspi.h](group__mspi__interface.md#gga20e348d7a9f1f9b32078a3bf6c4e82b9a13a3f16c4273ca6f28671663d0ecf33c)
- MSPI\_HALF\_DUPLEX : [mspi.h](group__mspi__interface.md#gga20e348d7a9f1f9b32078a3bf6c4e82b9ac05ddc8ca44f1c70d3c3748e21fe80d3)
- MSPI\_IO\_MODE\_DUAL : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5a9826a30dc94c734cdad9f91148cb8673)
- MSPI\_IO\_MODE\_DUAL\_1\_1\_2 : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5a8225b99a3943f35b1c713af462a2d5da)
- MSPI\_IO\_MODE\_DUAL\_1\_2\_2 : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5aaee80ab69881b09ec6b85dbaaa9e8663)
- MSPI\_IO\_MODE\_HEX : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5a1882d6c9772a1fa1e9e255fe3883d86b)
- MSPI\_IO\_MODE\_HEX\_8\_16\_16 : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5a49283124787af5787d64c71bf38e3caa)
- MSPI\_IO\_MODE\_HEX\_8\_8\_16 : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5ade6a4a01f3281e5331b3e16f1222eb02)
- MSPI\_IO\_MODE\_MAX : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5a9f726ce3043c03703d48bcdc45edcbdb)
- MSPI\_IO\_MODE\_OCTAL : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5ac79eb0c07038226a74411ca211d9b725)
- MSPI\_IO\_MODE\_OCTAL\_1\_1\_8 : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5ac70792100fe11a07c020c9825c1cdfbf)
- MSPI\_IO\_MODE\_OCTAL\_1\_8\_8 : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5a1d6b2be620bf17c4daecad66ba011573)
- MSPI\_IO\_MODE\_QUAD : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5af65a413ec9c72d6c7acf5154a618870a)
- MSPI\_IO\_MODE\_QUAD\_1\_1\_4 : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5abe9925279cee8433d2b11cc3614c5a5a)
- MSPI\_IO\_MODE\_QUAD\_1\_4\_4 : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5a1b3112af8589ef5e2493fc6545c4945a)
- MSPI\_IO\_MODE\_SINGLE : [mspi.h](group__mspi__interface.md#gga904dfc1c800fb9832f7c6200f767f9a5a63cf9def8dea959ebfb0f5f19c9235bd)
- MSPI\_OP\_MODE\_CONTROLLER : [mspi.h](group__mspi__interface.md#gga3f211cd81e05cb9ee073a2722f6b22d8a6a862f1d9931725be7789bd982d2937a)
- MSPI\_OP\_MODE\_PERIPHERAL : [mspi.h](group__mspi__interface.md#gga3f211cd81e05cb9ee073a2722f6b22d8a11af11e286399c7e2f1fbcadca44ea83)
- MSPI\_PIO : [mspi.h](group__mspi__interface.md#gga116259bbb1d12a10c2ba9e6051f2f000abea5c6920a3e81fe332c2a76e4d838a1)
- MSPI\_RX : [mspi.h](group__mspi__interface.md#gga498f10591acf5dc7ec88e0aa98e537d6a044160eb569add203f06d963f57d3541)
- MSPI\_TIMING\_PARAM\_DUMMY : [mspi.h](group__mspi__configure__api.md#ggaa25a7f97ab3437d4544832a0e7474f4aafae0ccedcd3b8f05e798037bf5414237)
- MSPI\_TX : [mspi.h](group__mspi__interface.md#gga498f10591acf5dc7ec88e0aa98e537d6a213d4457305ab45d31b9c06ec85d2b8a)
- MSPI\_XFER\_BIG\_ENDIAN : [mspi.h](group__mspi__interface.md#gga3625cde1379e66cb66a8cb3803ab2e44a08e9349361779ce246bb7da6a1f3012d)
- MSPI\_XFER\_LITTLE\_ENDIAN : [mspi.h](group__mspi__interface.md#gga3625cde1379e66cb66a8cb3803ab2e44acdde9f8c7517e287e2066c394593d345)
- MSPI\_XIP\_READ\_ONLY : [mspi.h](group__mspi__interface.md#gga006a1e32778a02299b3500886bb194faae9b2d08d8ae1722c3014a706fc801731)
- MSPI\_XIP\_READ\_WRITE : [mspi.h](group__mspi__interface.md#gga006a1e32778a02299b3500886bb194faa431525f8be52537b0a831f522726c7b9)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.7.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
